--- a/Muduo源码剖析/1.Channel.md
+++ b/Muduo源码剖析/1.Channel.md
@@ -52,7 +52,7 @@
    - 每个子Reactor的`EventLoop`在事件循环中通过`Poller`（如`epoll`）等待事件的发生。
    - 当`Poller`返回就绪的文件描述符时，`EventLoop`遍历这些就绪的文件描述符，并调用相应的`Channel`的回调函数处理事件。
 
-
+![image-20240823113059131](https://my-figures.oss-cn-beijing.aliyuncs.com/Figures/image-20240823113059131.png)
 
 
 
@@ -96,7 +96,17 @@ public:
     void enableWriting() { events_ |= kWriteEvent; update(); }
     void disableWriting() { events_ &= ~kWriteEvent; update(); }
     void disableAll() { events_ = kNoneEvent; update(); }
-
+/**
+ * 当改变channel所表示fd的events事件后，update负责在poller里面更改fd相应的事件epoll_ctl
+ * EventLoop => ChannelList   Poller
+ */ 
+void Channel::update()
+{
+    // 通过channel所属的EventLoop，调用poller的相应方法，注册fd的events事件
+    loop_->updateChannel(this);
+}
+    
+    
     // 返回fd当前的事件状态
     bool isNoneEvent() const { return events_ == kNoneEvent; }
     bool isWriting() const { return events_ & kWriteEvent; }
@@ -141,6 +151,9 @@ private:
 
 ## 处理事件
 
+**`std::shared_ptr<void> guard = tie_.lock();`**
+这一行代码尝试通过调用 `tie_.lock()` 来创建一个类型为 `std::shared_ptr<void>` 的智能指针 `guard`。`lock()` 方法会尝试从 `std::weak_ptr` 中创建一个 `std::shared_ptr`，如果对象仍然存在，`lock()` 会成功并返回一个 `shared_ptr`，使其共享该对象的所有权。如果对象已经被销毁，`lock()` 将返回一个空的 `shared_ptr`。
+
 ```c++
 // fd得到poller通知以后，处理事件的
 void Channel::handleEvent(Timestamp receiveTime)
@@ -157,6 +170,13 @@ void Channel::handleEvent(Timestamp receiveTime)
     {
         handleEventWithGuard(receiveTime);
     }
+}
+
+// channel的tie方法什么时候调用过？一个TcpConnection新连接创建的时候 TcpConnection => Channel
+void Channel::tie(const std::shared_ptr<void> &obj)
+{
+    tie_ = obj;
+    tied_ = true;
 }
 
 
