--- a/Muduo源码剖析/3.EventLoop.md
+++ b/Muduo源码剖析/3.EventLoop.md
@@ -33,7 +33,9 @@ namespace CurrentThread
     }
 ```
 
+**`__thread`**：这是一个线程局部存储（Thread Local Storage，TLS）关键字。它的作用是为每个线程单独分配一个变量的副本。也就是说，每个线程都有自己独立的 `t_cachedTid` 变量，不会与其他线程的 `t_cachedTid` 共享。
 
+**`t_cachedTid`**：这个变量用于缓存当前线程的 `tid`（线程ID），初始值为 `0`，表示还没有缓存线程ID。
 
 ## 架构
 
