--- a/Muduo源码剖析/4.Thread.md
+++ b/Muduo源码剖析/4.Thread.md
@@ -153,6 +153,18 @@ void EventLoopThread::threadFunc()
     std::unique_lock<std::mutex> lock(mutex_);
     loop_ = nullptr;
 }
+
+
+
+// 开启服务器监听   loop.loop()
+void TcpServer::start()
+{
+    if (started_++ == 0) // 防止一个TcpServer对象被start多次
+    {
+        threadPool_->start(threadInitCallback_); // 启动底层的loop线程池
+        loop_->runInLoop(std::bind(&Acceptor::listen, acceptor_.get()));
+    }
+}
 ```
 
 
