--- a/Muduo源码剖析/8.Buffer.md
+++ b/Muduo源码剖析/8.Buffer.md
@@ -186,7 +186,9 @@ public:
 
 
 
-## 读取数据
+## fd读取数据
+
+从FD中读取数据到buffer中，也就是可写入操作。
 
 ![image-20240522114229160](https://my-figures.oss-cn-beijing.aliyuncs.com/Figures/image-20240522114229160.png)
 
@@ -231,7 +233,7 @@ ssize_t Buffer::readFd(int fd, int* saveErrno)
 
 
 
-## 写入数据
+## fd写入数据
 
 往fd中写入数据，从缓冲区拿数据写入fd中。
 
